kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app authentik
  namespace: &namespace security
spec:
  hostnames:
    - "authentik.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
